added class model views

--- a/reviews/templates/reviews/review.html
+++ b/reviews/templates/reviews/review.html
@@ -1,16 +1,10 @@
-<!DOCTYPE html>
+{% extends "reviews/base.html" %}
 {% load static %}
 
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>My review</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="{% static "reviews/styles.css" %}" />
-  </head>
-  <body>
+
+{% block title%} My review {% endblock %}
+
+    {% block content %}
     <form action="/" method="POST">
       {% csrf_token %}
       {% for field in form %}
@@ -24,5 +18,5 @@
         <button type="submit">Submit</button>
       </div>
     </form>
-  </body>
-</html>
+
+    {% endblock %}
