--- a/reviews/templates/reviews/thank_you.html
+++ b/reviews/templates/reviews/thank_you.html
@@ -1,14 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Thank you!</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-  </head>
-  <body>
+{% extends "reviews/base.html" %}
+    {%block title%}Thank you!{%endblock%}
+    
+{% block content %}
     <h1>Thank you {{user_name}}!</h1>
     <p>We appreciate your feedback.</p>
-  </body>
-</html>
+{% endblock %}
