--- a/reviews/templates/reviews/single_review.html
+++ b/reviews/templates/reviews/single_review.html
@@ -7,5 +7,5 @@
     <p>Rating: </p>
     <p> {{ review.rating }} </p>
     <p>Review: </p>
-    <p> {{ review.review }} </p>
+    <p> {{ review.review_text }} </p>
 {% endblock %}
