adjusted some links and the review list

--- a/reviews/templates/reviews/review_list.html
+++ b/reviews/templates/reviews/review_list.html
@@ -7,7 +7,7 @@
     <ul>
         {% for review in reviews %}
             <li>
-                {{ review.user_name }} (Rating: {{ review.rating }})
+               <a href="{% url 'single_review' pk=review.pk %}"> {{ review.user_name }} (Rating: {{ review.rating }})</a>
             </li>
         {% endfor %}
 {% endblock %}
