--- a/profiles/templates/profiles/create_profile.html
+++ b/profiles/templates/profiles/create_profile.html
@@ -15,7 +15,8 @@
     {% for field in form %}
       <div class="fieldWrapper">
         {{ field.errors }}
-        {{ field.label_tag }} {{ field }}
+        <span>{{ field.label_tag }}</span>
+        <p>{{ field }}</p>
         {% if field.help_text %}
           <p class="help">{{ field.help_text|safe }}</p>
         {% endif %}
