--- a/profiles/templates/profiles/user_profiles.html
+++ b/profiles/templates/profiles/user_profiles.html
@@ -10,6 +10,7 @@
         <h1>User Profiles</h1>
         {% for profile in profiles %}
         <div class="profile">
+            <img width="400" height="400" src="{{ profile.profile_pic.url }}" alt="{{ profile.first_name }} {{ profile.last_name }}" />
             <h2>{{ profile.first_name }} {{profile.last_name}}</h2>
             <p>{{ profile.email }}</p>
         </div>
