added favorite functionality

--- a/reviews/templates/reviews/single_review.html
+++ b/reviews/templates/reviews/single_review.html
@@ -8,4 +8,13 @@
     <p> {{ review.rating }} </p>
     <p>Review: </p>
     <p> {{ review.review_text }} </p>
+    <form action="/reviews/favorite" method="POST">
+        {% csrf_token %}
+        <input type="hidden" name="review_id" value="{{ review.id }}">
+        <button>Favourite</button>
+    </form>
+
+    {% if request.session.favorite_review_id|stringformat:"s" == review.id|stringformat:"s" %}
+    <p>This is your favorite review!</p>
+    {% endif %}
 {% endblock %}
