--- a/reviews/templates/reviews/single_review.html
+++ b/reviews/templates/reviews/single_review.html
@@ -3,18 +3,20 @@
 {% block title %}Review Detail{% endblock %}
 
 {% block content%}
+    {% if is_favorite %}
+    <p>This is your favorite review!</p>
+    {% endif %}
     <h1> {{ review.user_name }} </h1>
     <p>Rating: </p>
     <p> {{ review.rating }} </p>
     <p>Review: </p>
     <p> {{ review.review_text }} </p>
+    {% if not is_favorite %}
     <form action="/reviews/favorite" method="POST">
         {% csrf_token %}
         <input type="hidden" name="review_id" value="{{ review.id }}">
         <button>Favourite</button>
     </form>
-
-    {% if request.session.favorite_review_id|stringformat:"s" == review.id|stringformat:"s" %}
-    <p>This is your favorite review!</p>
     {% endif %}
+
 {% endblock %}
